# bytype

./: .gitignore  .taurignore  CLAUDE.md  Cargo.toml  README.md  config.example.toml  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-06-09-g1-tauri-shell.md  2026-06-09-phase1-headless-core.md  2026-06-09-phase2-llm-correction-config.md  2026-06-09-phase3-smart-features.md  2026-06-10-g2-recording-overlay.md  2026-06-10-g3-sound-cues.md  2026-06-10-g4-settings-ui.md  2026-06-10-g5-onboarding.md  2026-06-10-g6-installer.md  2026-06-11-meeting-minutes-m1.md  2026-06-11-meeting-minutes-m2.md  2026-06-11-meeting-minutes-m3-diarization.md  2026-06-11-meeting-minutes-m4.md  2026-06-11-meeting-minutes-m5-cleanup.md
docs/superpowers/specs/: 2026-06-09-g1-tauri-shell-design.md  2026-06-09-phase3-smart-features-design.md  2026-06-09-voice-input-design.md  2026-06-10-g2-recording-overlay-design.md  2026-06-10-g3-sound-cues-design.md  2026-06-10-g4-settings-ui-design.md  2026-06-10-g5-onboarding-design.md  2026-06-10-g6-installer-design.md  2026-06-11-meeting-minutes-design.md
examples/: command_text.rs  correct_text.rs  gen_icon.rs  gen_sounds.rs  meeting_process.rs  transcribe_wav.rs
scripts/: build-installer.ps1
src/: asr.rs  audio.rs  config.rs  corrector.rs  download.rs  engine.rs  foreground.rs  inject.rs  keys.rs  lib.rs  main.rs  readiness.rs  sound.rs
src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  meeting_cmd.rs  settings.rs  wizard.rs
src-ui/: App.tsx  main.tsx  overlay.tsx
src-ui/settings/: AboutPage.tsx  AppStylePage.tsx  GeneralPage.tsx  HelpPage.tsx  HotkeyPage.tsx  LlmPage.tsx  MeetingPage.tsx  VocabPage.tsx  api.ts  changelog.ts  consts.ts  meetingApi.ts  theme.ts  types.ts  validate.ts  widgets.tsx
src-ui/wizard/: DepsStep.tsx  DoneStep.tsx  DownloadStep.tsx  LlmStep.tsx  WelcomeStep.tsx  Wizard.tsx  api.ts  types.ts
src/hotkey/: mod.rs  state.rs
src/meeting/: capture_mic.rs  capture_system.rs  diarize.rs  minutes.rs  mix.rs  mod.rs  mode.rs  mp3.rs  naming.rs  pipeline.rs  resample.rs  segment.rs  session.rs  transcribe.rs  transcript.rs  wav.rs
