[workspace]
members = ["src-tauri"]

[package]
name = "voice-input"
version = "1.2.0"
edition = "2021"

[lib]
name = "voice_input"
path = "src/lib.rs"

[[bin]]
name = "voice-input"
path = "src/main.rs"

[dependencies]
anyhow = "1"
cpal = "0.15"
arboard = "3"
sherpa-rs = "0.6"
crossbeam-channel = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_Media_Audio",
]

[dev-dependencies]
hound = "3"
image = "0.25"
