[package]
name = "bytype"
version = "0.1.0"
edition = "2021"

[lib]
name = "bytype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
voice_input = { package = "voice-input", path = ".." }
anyhow = "1"

[[bin]]
name = "bytype"
path = "src/main.rs"
