[package]
name = "bytype"
version = "0.1.0"
edition = "2021"

[lib]
name = "bytype_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
voice_input = { package = "voice-input", path = ".." }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
winreg = "0.10"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader"]

[[bin]]
name = "bytype"
path = "src/main.rs"
